# sales-dojo

./: .gitignore  README.md  README_DEV.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  init.sql  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20260111_initial_create_tables.py
backend/app/: main.py
backend/app/api/routes/: auth.py  onboarding.py  personas.py  sessions.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/db/: __init__.py  models.py
backend/app/models/: company.py  feedback.py  knowledge_base.py  persona.py  training_session.py  user.py
backend/app/services/: openai_service.py
backend/app/services/call/: rag_service.py  vapi_orchestrator.py
backend/app/services/onboarding/: document_processor.py  embedding_service.py
backend/app/utils/: logger.py  validators.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/types/: index.ts
nginx/: Dockerfile  nginx.conf
scripts/: clean.sh  dev-down.sh  dev-up.sh  logs.sh  prod-down.sh  prod-up.sh  rebuild.sh
